News UAT/force-app/main/default/objects/Answer2__c/Answer2__c.object-meta.xml
<CustomObject>
    <description>This is the Answer object used by the Campaign Brief Questionnaire</description>
    <label>Answer2</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Answer Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>