News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Answer_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answer Checkbox</label>
    <type>Checkbox</type>
</CustomField>