News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Answer_Currency__c</fullName>
    <label>Answer Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>