News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>Answer_Date__c</fullName>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>