News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Email__c.field-meta.xml
<CustomField>
    <fullName>Answer_Email__c</fullName>
    <label>Answer Email</label>
    <type>Email</type>
</CustomField>