News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Long_Text__c</fullName>
    <label>Answer Long Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>