News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Answer_Numeric__c</fullName>
    <label>Answer Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>