News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Percent__c.field-meta.xml
<CustomField>
    <fullName>Answer_Percent__c</fullName>
    <label>Answer Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>