News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Answer_Phone__c</fullName>
    <label>Answer Phone</label>
    <type>Phone</type>
</CustomField>