News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>