News UAT/force-app/main/default/objects/Answer2__c/fields/Answer_Url__c.field-meta.xml
<CustomField>
    <fullName>Answer_Url__c</fullName>
    <label>Answer Url</label>
    <type>Url</type>
</CustomField>